code/python/FixedIncomeCalculation/v1/README.md
[![FactSet](https://raw.githubusercontent.com/factset/enterprise-sdk/main/docs/images/factset-logo.svg)](https://www.factset.com)

# Fixed Income Calculation client library for Python

[![PyPi](https://img.shields.io/pypi/v/fds.sdk.FixedIncomeCalculation)](https://pypi.org/project/fds.sdk.FixedIncomeCalculation/)
[![Apache-2 license](https://img.shields.io/badge/license-Apache2-brightgreen.svg)](https://www.apache.org/licenses/LICENSE-2.0)

Allow clients to fetch Analytics through APIs.

This Python package is automatically generated by the [OpenAPI Generator](https://openapi-generator.tech) project:

- API version: 1
- Package version: 0.9.1
- Build package: org.openapitools.codegen.languages.PythonClientCodegen

For more information, please visit [https://developer.factset.com/contact](https://developer.factset.com/contact)

## Requirements

* Python >= 3.7

## Installation

### Poetry

```shell
poetry add fds.sdk.utils fds.sdk.FixedIncomeCalculation==0.9.1
```

### pip

```shell
pip install fds.sdk.utils fds.sdk.FixedIncomeCalculation==0.9.1
```

## Usage

1. [Generate authentication credentials](../../../../README.md#authentication).
2. Setup Python environment.
   1. Install and activate python 3.7+. If you're using [pyenv](https://github.com/pyenv/pyenv):

      ```sh
      pyenv install 3.9.7
      pyenv shell 3.9.7
      ```

   2. (optional) [Install poetry](https://python-poetry.org/docs/#installation).
3. [Install dependencies](#installation).
4. Run the following:

```python
from fds.sdk.utils.authentication import ConfidentialClient

import fds.sdk.FixedIncomeCalculation
from fds.sdk.FixedIncomeCalculation.api import fi_calculations_api
from fds.sdk.FixedIncomeCalculation.models import *
from dateutil.parser import parse as dateutil_parser
from pprint import pprint

# See configuration.py for a list of all supported configuration parameters.

# Examples for each supported authentication method are below,
# choose one that satisfies your use case.

# (Preferred) OAuth 2.0: FactSetOAuth2
# See https://github.com/FactSet/enterprise-sdk#oauth-20
# for information on how to create the app-config.json file
# See https://github.com/FactSet/enterprise-sdk-utils-python#authentication
# for more information on using the ConfidentialClient class
configuration = fds.sdk.FixedIncomeCalculation.Configuration(
    fds_oauth_client=ConfidentialClient('/path/to/app-config.json')
)

# Basic authentication: FactSetApiKey
# See https://github.com/FactSet/enterprise-sdk#api-key
# for information how to create an API key
# configuration = fds.sdk.FixedIncomeCalculation.Configuration(
#     username='USERNAME-SERIAL',
#     password='API-KEY'
# )

# Enter a context with an instance of the API client
with fds.sdk.FixedIncomeCalculation.ApiClient(configuration) as api_client:
    # Create an instance of the API class
    api_instance = fi_calculations_api.FICalculationsApi(api_client)
    # NOTE: The parameter variable defined below is just an example and may potentially contain non valid values. So please replace this with valid values.
    id = "id_example" # str | from url, provided from the location header in the Run FI Calculation endpoint

    try:
        # Cancel FI calculation by id
        # example passing only required values which don't have defaults set
        api_instance.cancel_fi_calculation_by_id(id)

    except fds.sdk.FixedIncomeCalculation.ApiException as e:
        print("Exception when calling FICalculationsApi->cancel_fi_calculation_by_id: %s\n" % e)

    # # Get response, http status code and response headers
    # try:
    #     # Cancel FI calculation by id
    #     api_response, http_status_code, response_headers = api_instance.cancel_fi_calculation_by_id_with_http_info(id)

    # except fds.sdk.FixedIncomeCalculation.ApiException as e:
    #     print("Exception when calling FICalculationsApi->cancel_fi_calculation_by_id: %s\n" % e)

    # # Get response asynchronous
    # try:
    #     # Cancel FI calculation by id
    #     async_result = api_instance.cancel_fi_calculation_by_id_async(id)
    # except fds.sdk.FixedIncomeCalculation.ApiException as e:
    #     print("Exception when calling FICalculationsApi->cancel_fi_calculation_by_id: %s\n" % e)

    # # Get response, http status code and response headers asynchronous
    # try:
    #     # Cancel FI calculation by id
    #     async_result = api_instance.cancel_fi_calculation_by_id_with_http_info_async(id)
    # except fds.sdk.FixedIncomeCalculation.ApiException as e:
    #     print("Exception when calling FICalculationsApi->cancel_fi_calculation_by_id: %s\n" % e)

```

### Using Pandas

To convert an API response to a Pandas DataFrame, it is necessary to transform it first to a dictionary.
```python
import pandas as pd

response_dict = api_response.to_dict()['data']

simple_json_response = pd.DataFrame(response_dict)
nested_json_response = pd.json_normalize(response_dict)
```

### Debugging

The SDK uses the standard library [`logging`](https://docs.python.org/3/library/logging.html#module-logging) module.

Setting `debug` to `True` on an instance of the `Configuration` class sets the log-level of related packages to `DEBUG`
and enables additional logging in Pythons [HTTP Client](https://docs.python.org/3/library/http.client.html).

**Note**: This prints out sensitive information (e.g. the full request and response). Use with care.

```python
import logging
import fds.sdk.FixedIncomeCalculation

logging.basicConfig(level=logging.DEBUG)

configuration = fds.sdk.FixedIncomeCalculation.Configuration(...)
configuration.debug = True
```

### Configure a Proxy

You can pass proxy settings to the Configuration class:

* `proxy`: The URL of the proxy to use.
* `proxy_headers`: a dictionary to pass additional headers to the proxy (e.g. `Proxy-Authorization`).

```python
import fds.sdk.FixedIncomeCalculation

configuration = fds.sdk.FixedIncomeCalculation.Configuration(
    # ...
    proxy="http://secret:password@localhost:5050",
    proxy_headers={
        "Custom-Proxy-Header": "Custom-Proxy-Header-Value"
    }
)
```

### Custom SSL Certificate

TLS/SSL certificate verification can be configured with the following Configuration parameters:

* `ssl_ca_cert`: a path to the certificate to use for verification in `PEM` format.
* `verify_ssl`: setting this to `False` disables the verification of certificates.
  Disabling the verification is not recommended, but it might be useful during
  local development or testing.

```python
import fds.sdk.FixedIncomeCalculation

configuration = fds.sdk.FixedIncomeCalculation.Configuration(
    # ...
    ssl_ca_cert='/path/to/ca.pem'
)
```


## Documentation for API Endpoints

All URIs are relative to *https://api.factset.com*

Class | Method | HTTP request | Description
------------ | ------------- | ------------- | -------------
*FICalculationsApi* | [**cancel_fi_calculation_by_id**](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FixedIncomeCalculation/v1/docs/FICalculationsApi.md#cancel_fi_calculation_by_id) | **DELETE** /analytics/engines/fi/v1/calculations/{id} | Cancel FI calculation by id
*FICalculationsApi* | [**get_fi_calculation_by_id**](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FixedIncomeCalculation/v1/docs/FICalculationsApi.md#get_fi_calculation_by_id) | **GET** /analytics/engines/fi/v1/calculations/{id} | Get FI calculation by id
*FICalculationsApi* | [**run_fi_calculation**](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FixedIncomeCalculation/v1/docs/FICalculationsApi.md#run_fi_calculation) | **POST** /analytics/engines/fi/v1/calculations | Run FI calculation


## Documentation For Models

 - [FICalculationParameters](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FixedIncomeCalculation/v1/docs/FICalculationParameters.md)
 - [FIJobSettings](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FixedIncomeCalculation/v1/docs/FIJobSettings.md)
 - [FISecurity](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FixedIncomeCalculation/v1/docs/FISecurity.md)


## Documentation For Authorization


## FactSetApiKey

- **Type**: HTTP basic authentication


## FactSetOAuth2

- **Type**: OAuth
- **Flow**: application
- **Authorization URL**: 
- **Scopes**: N/A


## Notes for Large OpenAPI documents
If the OpenAPI document is large, imports in fds.sdk.FixedIncomeCalculation.apis and fds.sdk.FixedIncomeCalculation.models may fail with a
RecursionError indicating the maximum recursion limit has been exceeded. In that case, there are a couple of solutions:

Solution 1:
Use specific imports for apis and models like:
- `from fds.sdk.FixedIncomeCalculation.api.default_api import DefaultApi`
- `from fds.sdk.FixedIncomeCalculation.model.pet import Pet`

Solution 2:
Before importing the package, adjust the maximum recursion limit as shown below:
```
import sys
sys.setrecursionlimit(1500)
import fds.sdk.FixedIncomeCalculation
from fds.sdk.FixedIncomeCalculation.apis import *
from fds.sdk.FixedIncomeCalculation.models import *
```

## Contributing

Please refer to the [contributing guide](../../../../CONTRIBUTING.md).

## Copyright

Copyright 2022 FactSet Research Systems Inc

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.

