code/python/FixedIncomeCalculation/v3/README.md
[![FactSet](https://raw.githubusercontent.com/factset/enterprise-sdk/main/docs/images/factset-logo.svg)](https://www.factset.com)

# Fixed Income Calculation client library for Python

[![API Version](https://img.shields.io/badge/api-v3.12.0-blue)](https://developer.factset.com/api-catalog/fixed-income-calculation-api)
[![PyPi](https://img.shields.io/pypi/v/fds.sdk.FixedIncomeCalculation)](https://pypi.org/project/fds.sdk.FixedIncomeCalculation/)
[![Apache-2 license](https://img.shields.io/badge/license-Apache2-brightgreen.svg)](https://www.apache.org/licenses/LICENSE-2.0)

Allow clients to fetch Analytics through APIs.

This Python package is automatically generated by the [OpenAPI Generator](https://openapi-generator.tech) project:

- API version: 3.12.0
- SDK version: 1.1.1
- Build package: org.openapitools.codegen.languages.PythonClientCodegen

For more information, please visit [https://developer.factset.com/contact](https://developer.factset.com/contact)

## Requirements

* Python >= 3.7

## Installation

### Poetry

```shell
poetry add fds.sdk.utils fds.sdk.FixedIncomeCalculation==1.1.1
```

### pip

```shell
pip install fds.sdk.utils fds.sdk.FixedIncomeCalculation==1.1.1
```

## Usage

1. [Generate authentication credentials](../../../../README.md#authentication).
2. Setup Python environment.
   1. Install and activate python 3.7+. If you're using [pyenv](https://github.com/pyenv/pyenv):

      ```sh
      pyenv install 3.9.7
      pyenv shell 3.9.7
      ```

   2. (optional) [Install poetry](https://python-poetry.org/docs/#installation).
3. [Install dependencies](#installation).
4. Run the following:

> [!IMPORTANT]
> The parameter variables defined below are just examples and may potentially contain non valid values. Please replace them with valid values.

### Example Code

```python
from fds.sdk.utils.authentication import ConfidentialClient

import fds.sdk.FixedIncomeCalculation
from fds.sdk.FixedIncomeCalculation.api import discount_curves_api
from fds.sdk.FixedIncomeCalculation.models import *
from dateutil.parser import parse as dateutil_parser
from pprint import pprint

# See configuration.py for a list of all supported configuration parameters.

# Examples for each supported authentication method are below,
# choose one that satisfies your use case.

# (Preferred) OAuth 2.0: FactSetOAuth2
# See https://github.com/FactSet/enterprise-sdk#oauth-20
# for information on how to create the app-config.json file
#
# The confidential client instance should be reused in production environments.
# See https://github.com/FactSet/enterprise-sdk-utils-python#authentication
# for more information on using the ConfidentialClient class
configuration = fds.sdk.FixedIncomeCalculation.Configuration(
    fds_oauth_client=ConfidentialClient('/path/to/app-config.json')
)

# Basic authentication: FactSetApiKey
# See https://github.com/FactSet/enterprise-sdk#api-key
# for information how to create an API key
# configuration = fds.sdk.FixedIncomeCalculation.Configuration(
#     username='USERNAME-SERIAL',
#     password='API-KEY'
# )

# Enter a context with an instance of the API client
with fds.sdk.FixedIncomeCalculation.ApiClient(configuration) as api_client:
    # Create an instance of the API class
    api_instance = discount_curves_api.DiscountCurvesApi(api_client)
    currency = "currency_example" # str |  (optional)

    try:
        # Get Discount Curves
        # example passing only required values which don't have defaults set
        # and optional values
        api_response = api_instance.get_all_fi_discount_curves(currency=currency)

        pprint(api_response)
    except fds.sdk.FixedIncomeCalculation.ApiException as e:
        print("Exception when calling DiscountCurvesApi->get_all_fi_discount_curves: %s\n" % e)

    # # Get response, http status code and response headers
    # try:
    #     # Get Discount Curves
    #     api_response, http_status_code, response_headers = api_instance.get_all_fi_discount_curves_with_http_info(currency=currency)


    #     pprint(api_response)
    #     pprint(http_status_code)
    #     pprint(response_headers)
    # except fds.sdk.FixedIncomeCalculation.ApiException as e:
    #     print("Exception when calling DiscountCurvesApi->get_all_fi_discount_curves: %s\n" % e)

    # # Get response asynchronous
    # try:
    #     # Get Discount Curves
    #     async_result = api_instance.get_all_fi_discount_curves_async(currency=currency)
    #     api_response = async_result.get()


    #     pprint(api_response)
    # except fds.sdk.FixedIncomeCalculation.ApiException as e:
    #     print("Exception when calling DiscountCurvesApi->get_all_fi_discount_curves: %s\n" % e)

    # # Get response, http status code and response headers asynchronous
    # try:
    #     # Get Discount Curves
    #     async_result = api_instance.get_all_fi_discount_curves_with_http_info_async(currency=currency)
    #     api_response, http_status_code, response_headers = async_result.get()


    #     pprint(api_response)
    #     pprint(http_status_code)
    #     pprint(response_headers)
    # except fds.sdk.FixedIncomeCalculation.ApiException as e:
    #     print("Exception when calling DiscountCurvesApi->get_all_fi_discount_curves: %s\n" % e)

```

### Using Pandas

To convert an API response to a Pandas DataFrame, it is necessary to transform it first to a dictionary.
```python
import pandas as pd

response_dict = api_response.to_dict()['data']

simple_json_response = pd.DataFrame(response_dict)
nested_json_response = pd.json_normalize(response_dict)
```

### Debugging

The SDK uses the standard library [`logging`](https://docs.python.org/3/library/logging.html#module-logging) module.

Setting `debug` to `True` on an instance of the `Configuration` class sets the log-level of related packages to `DEBUG`
and enables additional logging in Pythons [HTTP Client](https://docs.python.org/3/library/http.client.html).

**Note**: This prints out sensitive information (e.g. the full request and response). Use with care.

```python
import logging
import fds.sdk.FixedIncomeCalculation

logging.basicConfig(level=logging.DEBUG)

configuration = fds.sdk.FixedIncomeCalculation.Configuration(...)
configuration.debug = True
```

### Configure a Proxy

You can pass proxy settings to the Configuration class:

* `proxy`: The URL of the proxy to use.
* `proxy_headers`: a dictionary to pass additional headers to the proxy (e.g. `Proxy-Authorization`).

```python
import fds.sdk.FixedIncomeCalculation

configuration = fds.sdk.FixedIncomeCalculation.Configuration(
    # ...
    proxy="http://secret:password@localhost:5050",
    proxy_headers={
        "Custom-Proxy-Header": "Custom-Proxy-Header-Value"
    }
)
```

### Custom SSL Certificate

TLS/SSL certificate verification can be configured with the following Configuration parameters:

* `ssl_ca_cert`: a path to the certificate to use for verification in `PEM` format.
* `verify_ssl`: setting this to `False` disables the verification of certificates.
  Disabling the verification is not recommended, but it might be useful during
  local development or testing.

```python
import fds.sdk.FixedIncomeCalculation

configuration = fds.sdk.FixedIncomeCalculation.Configuration(
    # ...
    ssl_ca_cert='/path/to/ca.pem'
)
```

### Request Retries

In case the request retry behaviour should be customized, it is possible to pass a `urllib3.Retry` object to the `retry` property of the Configuration.

```python
from urllib3 import Retry
import fds.sdk.FixedIncomeCalculation

configuration = fds.sdk.FixedIncomeCalculation.Configuration(
    # ...
)

configuration.retries = Retry(total=3, status_forcelist=[500, 502, 503, 504])
```


## Documentation for API Endpoints

All URIs are relative to *https://api.factset.com*

Class | Method | HTTP request | Description
------------ | ------------- | ------------- | -------------
*DiscountCurvesApi* | [**get_all_fi_discount_curves**](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FixedIncomeCalculation/v3/docs/DiscountCurvesApi.md#get_all_fi_discount_curves) | **GET** /analytics/engines/fi/v3/discount-curves | Get Discount Curves
*FICalculationsApi* | [**cancel_calculation_by_id**](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FixedIncomeCalculation/v3/docs/FICalculationsApi.md#cancel_calculation_by_id) | **DELETE** /analytics/engines/fi/v3/calculations/{id} | Cancel FI calculation by id
*FICalculationsApi* | [**get_calculation_parameters**](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FixedIncomeCalculation/v3/docs/FICalculationsApi.md#get_calculation_parameters) | **GET** /analytics/engines/fi/v3/calculations/{id} | Get FI calculation parameters by id
*FICalculationsApi* | [**get_calculation_result**](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FixedIncomeCalculation/v3/docs/FICalculationsApi.md#get_calculation_result) | **GET** /analytics/engines/fi/v3/calculations/{id}/result | Get FI calculation result by id
*FICalculationsApi* | [**get_calculation_status_by_id**](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FixedIncomeCalculation/v3/docs/FICalculationsApi.md#get_calculation_status_by_id) | **GET** /analytics/engines/fi/v3/calculations/{id}/status | Get FI calculation status by id
*FICalculationsApi* | [**post_and_calculate**](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FixedIncomeCalculation/v3/docs/FICalculationsApi.md#post_and_calculate) | **POST** /analytics/engines/fi/v3/calculations | Create and Run FI calculation
*FICalculationsApi* | [**put_and_calculate**](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FixedIncomeCalculation/v3/docs/FICalculationsApi.md#put_and_calculate) | **PUT** /analytics/engines/fi/v3/calculations/{id} | Create or Update FI calculation and run it.


## Documentation For Models

 - [CalculationInfo](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FixedIncomeCalculation/v3/docs/CalculationInfo.md)
 - [CalculationInfoRoot](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FixedIncomeCalculation/v3/docs/CalculationInfoRoot.md)
 - [CalculationMeta](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FixedIncomeCalculation/v3/docs/CalculationMeta.md)
 - [ClientErrorResponse](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FixedIncomeCalculation/v3/docs/ClientErrorResponse.md)
 - [Error](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FixedIncomeCalculation/v3/docs/Error.md)
 - [ErrorSource](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FixedIncomeCalculation/v3/docs/ErrorSource.md)
 - [FIAttributionForJobSettings](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FixedIncomeCalculation/v3/docs/FIAttributionForJobSettings.md)
 - [FIAttributionForSecurities](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FixedIncomeCalculation/v3/docs/FIAttributionForSecurities.md)
 - [FIBalloonExtension](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FixedIncomeCalculation/v3/docs/FIBalloonExtension.md)
 - [FIBankLoans](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FixedIncomeCalculation/v3/docs/FIBankLoans.md)
 - [FICalculationParameters](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FixedIncomeCalculation/v3/docs/FICalculationParameters.md)
 - [FICalculationParametersRoot](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FixedIncomeCalculation/v3/docs/FICalculationParametersRoot.md)
 - [FICashflows](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FixedIncomeCalculation/v3/docs/FICashflows.md)
 - [FIConvertibleSettings](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FixedIncomeCalculation/v3/docs/FIConvertibleSettings.md)
 - [FIDiscountCurveInfo](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FixedIncomeCalculation/v3/docs/FIDiscountCurveInfo.md)
 - [FIDiscountCurveInfoRoot](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FixedIncomeCalculation/v3/docs/FIDiscountCurveInfoRoot.md)
 - [FIJobSettings](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FixedIncomeCalculation/v3/docs/FIJobSettings.md)
 - [FILoss](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FixedIncomeCalculation/v3/docs/FILoss.md)
 - [FIMarketEnvironment](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FixedIncomeCalculation/v3/docs/FIMarketEnvironment.md)
 - [FIMunicipalBonds](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FixedIncomeCalculation/v3/docs/FIMunicipalBonds.md)
 - [FIMunicipalBondsForJobSettings](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FixedIncomeCalculation/v3/docs/FIMunicipalBondsForJobSettings.md)
 - [FIPrepay](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FixedIncomeCalculation/v3/docs/FIPrepay.md)
 - [FIPrepayLockout](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FixedIncomeCalculation/v3/docs/FIPrepayLockout.md)
 - [FIReferencePrepay](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FixedIncomeCalculation/v3/docs/FIReferencePrepay.md)
 - [FIReferenceSecurity](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FixedIncomeCalculation/v3/docs/FIReferenceSecurity.md)
 - [FISecurity](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FixedIncomeCalculation/v3/docs/FISecurity.md)
 - [FIServicerAdvances](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FixedIncomeCalculation/v3/docs/FIServicerAdvances.md)
 - [FIServicerAdvancesForSecurities](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FixedIncomeCalculation/v3/docs/FIServicerAdvancesForSecurities.md)
 - [FIStructuredProductsForJobSettings](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FixedIncomeCalculation/v3/docs/FIStructuredProductsForJobSettings.md)
 - [FIStructuredProductsForSecurities](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FixedIncomeCalculation/v3/docs/FIStructuredProductsForSecurities.md)
 - [ObjectRoot](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/FixedIncomeCalculation/v3/docs/ObjectRoot.md)


## Documentation For Authorization


## FactSetApiKey

- **Type**: HTTP basic authentication


## FactSetOAuth2

- **Type**: OAuth
- **Flow**: application
- **Authorization URL**: 
- **Scopes**: N/A


## Notes for Large OpenAPI documents
If the OpenAPI document is large, imports in fds.sdk.FixedIncomeCalculation.apis and fds.sdk.FixedIncomeCalculation.models may fail with a
RecursionError indicating the maximum recursion limit has been exceeded. In that case, there are a couple of solutions:

Solution 1:
Use specific imports for apis and models like:
- `from fds.sdk.FixedIncomeCalculation.api.default_api import DefaultApi`
- `from fds.sdk.FixedIncomeCalculation.model.pet import Pet`

Solution 2:
Before importing the package, adjust the maximum recursion limit as shown below:
```
import sys
sys.setrecursionlimit(1500)
import fds.sdk.FixedIncomeCalculation
from fds.sdk.FixedIncomeCalculation.apis import *
from fds.sdk.FixedIncomeCalculation.models import *
```

## Contributing

Please refer to the [contributing guide](../../../../CONTRIBUTING.md).

## Copyright

Copyright 2022 FactSet Research Systems Inc

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.

